--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #game {
     background-color: black;
 }
-#controls {
+#jumpButton {
             width: 251px;
             height: 251px;
             font-size: 20px;
