--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
 }
 #jumpButton {
             
-            width: 251px;
+            width: device-width;
             height: 251px;
             font-size: 20px;
-            padding: 10px 20px;
+/*             padding: 10px 20px; */
             cursor: pointer;
             border-radius: 50%;
             border: none;
