--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
 }
 #jumpButton {
             
-            width: device-width;
+            width: 250px;
             height: 251px;
             font-size: 20px;
 /*             padding: 10px 20px; */
             cursor: pointer;
-            border-radius: 50%;
+/*             border-radius: 50%; */
             border: none;
             color: #ffffff;
             position: relative;
